# ats-resume-checker

./: .gitignore  CLAUDE.md  README.md  ats_check.py  pyproject.toml  requirements.txt
docs/implementation_plan/: README.md  overview.md  phase-1-foundation.md  phase-2-checker-engine.md  phase-3-reporters.md  phase-4-cli-and-config.md  phase-5-testing.md  phase-6-docs-and-ci.md  phase-7-advanced-features.md
src/ats_checker/: __init__.py  __main__.py  cli.py  config.py  engine.py  models.py  pdf_utils.py
src/ats_checker/checkers/: __init__.py  base.py  contact_info.py  file_size.py  fonts.py  images.py  layout.py  metadata.py  registry.py  sections.py  special_chars.py  text_extraction.py
src/ats_checker/reporters/: __init__.py  base.py  html_reporter.py  json_reporter.py  terminal.py  terminal_reporter.py  utils.py
src/ats_checker/reporters/templates/: batch_report.html  file_section.html  issue_card.html  remediation.html  report.html
tests/: conftest.py  helpers.py  test_basic.py  test_config.py  test_models.py  test_pdf_utils.py
