[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ats-resume-checker"
version = "0.1.0"
description = "ATS Resume Checker - analyzes PDF resumes for ATS compatibility"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "VitekHub"}
]
dependencies = [
    "pdfplumber>=0.10",
    "pymupdf>=1.23",
    "typer[all]>=0.9",
    "rich>=13",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.0",
    "mypy>=1.5",
    "ruff>=0.1",
]

[project.scripts]
ats-check = "ats_checker.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/ats_checker"]

[tool.ruff]
line-length = 100
target-version = "py311"
lint.select = ["E", "F", "I"] # Pyflakes, Error, Isort

[tool.mypy]
strict = true
warn_unused_ignores = true
explicit_package_bases = true
plugins = ["pydantic.mypy"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
